<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_optional_"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/reportName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_email_optional_"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/reportEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/reportDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="3" >
            </EditText>
        </LinearLayout>


        <Button
            android:id="@+id/reportSend"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/send" />
    </LinearLayout>

</ScrollView>